# kip

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  justfile  libnull.rlib
.cargo/: config.toml
assets/: main.css
cli/: Cargo.toml
cli/src/: backup.rs  check.rs  config.rs  daemon_lock.rs  db.rs  disk_space.rs  drive.rs  drive_config.rs  error.rs  folder.rs  git_verify.rs  lib.rs  main.rs  progress.rs  restore.rs  safety.rs  state.rs  status.rs  validate.rs  zip.rs
daemon/: Cargo.toml
daemon/src/: graph_store.rs  lib.rs
daemon/src/db/: init.rs  schema.rs
daemon/src/engine/: mod.rs  scanner.rs  scheduler.rs  transfer.rs
dev_notes/: CIRCULAR_NODES_IMPLEMENTATION.md  COMPREHENSIVE_DEVELOPMENT_PLAN.md  FERRY_DESIGN_1.md  FERRY_DESIGN_2_DATA_MODEL.md  FERRY_DESIGN_3_INTENT_LIFECYCLE.md  FERRY_DESIGN_4_ARCHITECTURE.md  FERRY_DESIGN_5_ERROR_HANDLING.md  FERRY_DESIGN_6_MVP.md  FERRY_DESIGN_7_MAPPING_GRAPH.md  FILE_PICKER_IMPLEMENTATION.md  KIP_DESIGN_1.md  KIP_DESIGN_2_DATA_MODEL.md  KIP_DESIGN_3_INTENT_LIFECYCLE.md  KIP_DESIGN_4_ARCHITECTURE.md  KIP_DESIGN_6_MVP.md  KIP_DESIGN_7_MAPPING_GRAPH.md  KIP_DESIGN_8_FILE_PICKER.md  SESSION_SUMMARY.md
frontend/: Cargo.toml  Dioxus.toml
frontend/assets/: main.css
frontend/src/: app.rs  lib.rs  main.rs
frontend/src/api/: config.rs  intent.rs  location.rs  mod.rs  query.rs  review.rs  transfer.rs
frontend/src/devices/: macos.rs
frontend/src/engine/: scanner.rs
frontend/src/models/: review.rs
frontend/src/ui/: container_components.rs  file_picker.rs  graph.rs  graph_context_menu.rs  graph_edges.rs  graph_nodes.rs  graph_store.rs  mod.rs  notification.rs  review_queue.rs
frontend/src/util/: mod.rs
frontend/tests/: api_tests.rs  integration_tests.rs
frontend/tests/helpers/: mod.rs  test_app.rs
kip-core/: Cargo.toml
kip-core/src/: graph_types.rs  lib.rs  util.rs
kip-core/src/models/: location.rs
notes/: AI_HANDOFF_PROMPT.md  CIRCULAR_NODES_PROGRESS.md  DIOXUS_AND_DATABASES.md  DIOXUS_STORES_AND_COLLECTIONS.md  FILE_PICKER_BUGS.md
notes/archive/: NEXT_AGENT_PROMPT.md
notes/for_clawdbot/: OPENCLAW_NIXOS_SETUP.md  OPENCLAW_SETUP.md
notes/new_arch/: 01_architecture_overview.md  02_api_specification.md  03_cli_design.md  04_backend_modules.md  05_migration_plan.md  06_codebase_insights.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  README.md  TEST_RESULTS.md
notes/plans/: circular_nodes_implementation_plan.md  complete_circular_nodes.md  immediate_next_steps.md  kip_comprehensive_roadmap.md  zesty-plotting-cerf.md
notes/prompts/: ContextSummary.md  EXPANSION_IMPLEMENTATION_PLAN.md  NEXT_AGENT_PROMPT.md
notes/the_design/: COMPREHENSIVE_DEVELOPMENT_PLAN.md  CRITICAL_ISSUES.md  IMPLEMENTATION_SUMMARY.md  INTERACTION_MODEL.md  KIP_DESIGN_6_MVP.md  KIP_DESIGN_7_MAPPING_GRAPH.md  NEXT_AGENT_HANDOFF.md  START_HERE.md
notes/the_design/Phase1/: Phase1.1_Directory_Expansion_Implementation.md  Phase1.1_Directory_Expansion_and_File_Picker.md  Phase1.2_Node_Grouping_Implementation.md  Phase1.3_Force_Directed_Layout_Implementation.md
notes/the_design/Phase2/: Phase2.1_Core_Transfer_Engine.md  Phase2.3_Error_Handling_and_Review_Queue.md
notes/the_design/Phase3/: Phase3.1_Advanced_Visualization.md  Phase3.2_Remote_Access_and_Security.md  Phase3.3_Performance_Optimization.md
notes/the_design/Phase4/: Phase4.1_Testing_and_Quality_Assurance.md  Phase4.2_Deployment_and_Distribution.md  Phase4.3_Documentation_and_Support.md
src/: app.rs  db.rs  lib.rs  main.rs
src/api/: config.rs  intent.rs  location.rs  mod.rs  query.rs  review.rs  transfer.rs  types.rs
src/db/: handle.rs  init.rs  mod.rs
src/devices/: macos.rs  mod.rs
src/engine/: copier.rs  mod.rs  scanner.rs  scheduler.rs
src/models/: file_record.rs  intent.rs  job.rs  location.rs  mod.rs  review.rs
src/ui/: container_components.rs  file_picker.rs  graph.rs  graph_context_menu.rs  graph_edges.rs  graph_nodes.rs  graph_store.rs  graph_types.rs  intent_list.rs  intent_row.rs  mod.rs  new_intent.rs  notification.rs  picker_store.rs  review_queue.rs
tests/: api_tests.rs  integration_tests.rs
tests/helpers/: test_app.rs
