# [package]
# edition = "2021"
# name = "kip"
# version = "0.1.0"
# authors = ["Anders <git@anders.place>"]

# [features]
# backend = [
#     "actix-web",
#     "actix-files",
#     "actix-web-flash-messages",
#     "actix-dioxus-serve",
# ]
# default = [
#     "desktop",
#     "safe_mode",
# ]
# desktop = [
#     "dioxus/desktop",
#     "surrealdb",
#     "surrealdb-types",
#     "tokio",
#     "rfd",
#     "tracing-appender",
#     "walkdir",
#     "blake3",
#     "dirs",
#     "ulid",
# ]
# safe_mode = []
# web = [
#     "dioxus/web",
#     "wasm-bindgen-futures",
# ]

# [[bin]]
# name = "kip-backend"
# path = "src/bin/backend.rs"
# required-features = ["backend"]


[workspace]
resolver = "3"
members = [
    "cli",
    "core",
    "crates/actix-dioxus-serve", "daemon",
    "frontend",
]

[workspace.dependencies]
plist = "1"
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3.22"

[workspace.dependencies.actix-dioxus-serve]
path = "./crates/actix-dioxus-serve"
# optional = true


[workspace.dependencies.actix-web]
version = "4"
# optional = true

[workspace.dependencies.actix-files]
version = "0.6"
# optional = true

[workspace.dependencies.actix-web-flash-messages]
version = "0.5"
# optional = true

[workspace.dependencies.blake3]
version = "1"
# optional = true

[workspace.dependencies.chrono]
version = "0.4"
features = ["serde"]

[workspace.dependencies.clap]
version = "4.4"
features = ["derive"]

[workspace.dependencies.dioxus]
version = "0.7.3"
# features = [
#     "router",
#     "signals",
# ]

[workspace.dependencies.dirs]
version = "5.0"
# optional = true

[workspace.dependencies.rfd]
version = "0.15"
# optional = true

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.surrealdb]
version = "3.0.0"
features = ["kv-surrealkv"]
# optional = true

[workspace.dependencies.surrealdb-types]
version = "3.0.0"
# optional = true

[workspace.dependencies.tokio]
version = "1"
features = ["full"]
# optional = true

[workspace.dependencies.tracing-appender]
version = "0.2.4"
# optional = true

[workspace.dependencies.ulid]
version = "1.1"
# optional = true

[workspace.dependencies.walkdir]
version = "2"
# optional = true

# [workspace.dependencies.wasm-bindgen-futures]
# version = "0.4"
# optional = true

