# [package]
# edition = "2021"
# name = "kip"
# version = "0.1.0"
# authors = ["Anders <git@anders.place>"]

# [features]
# backend = [
#     "actix-web",
#     "actix-files",
#     "actix-web-flash-messages",
#     "actix-dioxus-serve",
# ]
# default = [
#     "desktop",
#     "safe_mode",
# ]
# desktop = [
#     "dioxus/desktop",
#     "surrealdb",
#     "surrealdb-types",
#     "tokio",
#     "rfd",
#     "tracing-appender",
#     "walkdir",
#     "blake3",
#     "dirs",
#     "ulid",
# ]
# safe_mode = []
# web = [
#     "dioxus/web",
#     "wasm-bindgen-futures",
# ]

# [[bin]]
# name = "kip-backend"
# path = "src/bin/backend.rs"
# required-features = ["backend"]


[workspace]
resolver = "3"
members = [
    "cli",
    "daemon",
    "frontend",
    "kip-core",
    "crates/actix-dioxus-serve",
]

[workspace.dependencies]
plist = "1"
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3.22"
tempfile = "3.26.0"
actix-dioxus-serve = { path = "./crates/actix-dioxus-serve" }
actix-web = "4"
actix-files = "0.6"
actix-web-flash-messages = "0.5"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
dioxus = { version = "0.7.3" }
dirs = "5.0"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
surrealdb = { version = "3.0.0", features = ["kv-surrealkv"] }
surrealdb-types = "3.0.0"
tokio = { version = "1", features = ["full"] }
tracing-appender = "0.2.4"
ulid = "1.1"
walkdir = "2"


