[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kip"
path = "src/main.rs"

[dependencies]
kip-core = { path = "../kip-core" }
daemon = { path = "../daemon" }
surrealdb = { workspace = true }
surrealdb-types = { workspace = true }

# Workspace dependencies
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# CLI specific
console = "0.15"
indicatif = "0.18"
anyhow = "1.0"
walkdir = { workspace = true }
dirs = { workspace = true }
glob = "0.3"
sha2 = "0.10"
parking_lot = "0.12"
toml = { workspace = true }
serde_yaml = "0.9"
flate2 = "1.0"
tar = "0.4"
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
