[package]
name = "frontend"
version = "0.1.0"
authors = ["Anders <git@anders.place>"]
edition = "2021"

[features]
default = ["desktop", "safe_mode"]
desktop = [
    "dioxus/desktop",
    "tokio",
    "rfd",
]
safe_mode = []
web = [
    "dioxus/web",
    "wasm-bindgen-futures",
]

# [[bin]]
# name = "kip"
# path = "src/main.rs"

[dependencies]
# Internal crates
kip-core = { path = "../kip-core" }
daemon = { path = "../daemon" }

# Workspace dependencies
plist = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
surrealdb-types = { workspace = true }
surrealdb = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
blake3 = { workspace = true }
ulid = { workspace = true }

# Dioxus
dioxus = { workspace = true, features = ["router", "signals"] }

# Optional desktop features
tokio = { workspace = true, features = ["full"], optional = true }
rfd = { workspace = true, optional = true }

# Web features
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"
