[package]
name = "kip-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
surrealdb = { workspace = true }
surrealdb-types = { workspace = true }
